2002-08-15  Tim Coleman <tim@timcoleman.com>
	* unix.args: 
		Add System.Globalization/TextInfo.cs
		Add System.Runtime.Serialization/FormatterConverter.cs

2002-07-31  Rodrigo Moya <rodrigo@ximian.com>

	* unix.args: added new files from System.Runtime.Remoting.Channels.

2002-07-31  Duncan Mak  <duncan@ximian.com>

	* unix.args: Added interfaces and enumerations from
	System.Runtime.Remoting.Channels. 

2002-07-31  Duncan Mak  <duncan@ximian.com>

	* unix.args: Added new classes in
	System.Runtime.Remoting.Contexts.
	

2002-07-31  Duncan Mak  <duncan@ximian.com>

	* unix.args: Added new Exceptions, Interfaces and various
	TypeEntries from System.Runtime.Remoting.

2002-07-29  Martin Baulig  <martin@gnome.org>

	* list: Removed, this isn't used anymore and people are already
	getting confused which file to use.

2002-07-24  Duncan Mak  <duncan@ximian.com>

	* unix.args: Added files from Remoting.Lifetime and
	Remoting.Metadata.

	* ChangeLog: Moved entries from System.Runtime.Remoting.Activation
	and System.Runtime.Remoting.Proxies to their own ChangeLog.

2002-07-23  Duncan Mak  <duncan@ximian.com>

	* list: 
	* unix.args: Added new Attributes in
	System.Runtime.CompilerServices and System.Runtime.Remoting.Messaging.

2002-07-22  Tim Coleman <tim@timcoleman.com>
	* list:
	* unix.args:
		Added System.Security.Permission/ReflectionPermission.cs and
		System.Security.Permission/EnvironmentPermission.cs and

2002-07-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* list:
	* unix.args: added IObjectHandle.cs.

2002-06-20  Martin Baulig  <martin@gnome.org>

	* unix.args: New file.  This is a mcs response file to compile
	corlib on GNU/Linux (which doesn't work yet).

2002-04-30  Daniel Stodden  <stodden@in.tum.de>

	* System/Delegate.cs: Implemented Remove()
	* System/MulticastDelegate.cs: Implementation of RemoveImpl()
	done. Plus a fix for Equals().
	* Test/System/MulticastDelegate.cs: Added. Should reflect above
	changes.
	